--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "blog backend practice",
   "main": "index.js",
-
+  "script": {
+    "start": "node index.js"
+  },
   "author": "Start Bootstrap",
   "contributors": [
     "Sonia Itiveh"
