--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "blog backend practice",
   "main": "index.js",
   "script": {
-    "start": ""
+    "start": "nodemon index.js"
   },
   "author": "Start Bootstrap",
   "contributors": [
@@ -22,6 +22,7 @@
     "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.1",
-    "mongoose-unique-validator": "^3.0.0"
+    "mongoose-unique-validator": "^3.0.0",
+    "nodemon": "^2.0.6"
   }
 }
